// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Do not show tooltip if there is no content prop 1`] = `
<body>
  <div>
    <div
      data-testid="pbl-tooltip-wrapper"
    >
      content
    </div>
  </div>
</body>
`;

exports[`side "bottom" > render and update size 1`] = `
<body>
  <div>
    <div
      data-testid="pbl-tooltip-wrapper"
    >
      content
    </div>
  </div>
  <div
    data-testid="pbl-popover-mountpoint"
  />
</body>
`;

exports[`side "left" > render and update size 1`] = `
<body>
  <div>
    <div
      data-testid="pbl-tooltip-wrapper"
    >
      content
    </div>
  </div>
  <div
    data-testid="pbl-popover-mountpoint"
  />
</body>
`;

exports[`side "right" > render and update size 1`] = `
<body>
  <div>
    <div
      data-testid="pbl-tooltip-wrapper"
    >
      content
    </div>
  </div>
  <div
    data-testid="pbl-popover-mountpoint"
  />
</body>
`;

exports[`side "top" > render and update size 1`] = `
<body>
  <div>
    <div
      data-testid="pbl-tooltip-wrapper"
    >
      content
    </div>
  </div>
  <div
    data-testid="pbl-popover-mountpoint"
  />
</body>
`;
